# trips-tracker

./: manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_trip_distance_trip_flight_number_trip_lat_trip_long_and_more.py  0003_rename_end_date_trip_enddate_and_more.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/context/: AuthContext.ts
frontend/src/store/: store.ts  trips.ts  type.d.ts
trips/: asgi.py  settings.py  urls.py  wsgi.py
